# pyvista-x

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: release-please-config.json
.github/workflows/: ci.yml  pypi.yml  release-please.yml
src/pyvista_x/: __init__.py
tests/: conftest.py  test_integration.py  test_pyvista_x.py
